unpackaged/main/default/objects/WorkOrder_Clear__e/WorkOrder_Clear__e.object-meta.xml
<CustomObject>
    <label>WorkOrder Clear</label>
    <pluralLabel>WorkOrder Clear</pluralLabel>
</CustomObject>