unpackaged/main/default/objects/WorkOrder_Clear__e/fields/BL_Country__c.field-meta.xml
<CustomField>
    <fullName>BL_Country__c</fullName>
    <label>BL Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>