unpackaged/main/default/objects/WorkOrder_Clear__e/fields/BL_CrossStreet__c.field-meta.xml
<CustomField>
    <fullName>BL_CrossStreet__c</fullName>
    <label>BL CrossStreet</label>
    <length>100</length>
    <type>Text</type>
</CustomField>