unpackaged/main/default/objects/WorkOrder_Clear__e/fields/BL_FOIType__c.field-meta.xml
<CustomField>
    <fullName>BL_FOIType__c</fullName>
    <label>BL FOIType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>