unpackaged/main/default/objects/WorkOrder_Clear__e/fields/BL_FullAddress__c.field-meta.xml
<CustomField>
    <fullName>BL_FullAddress__c</fullName>
    <label>BL FullAddress</label>
    <length>200</length>
    <type>Text</type>
</CustomField>