unpackaged/main/default/objects/WorkOrder_Clear__e/fields/BL_Landmark__c.field-meta.xml
<CustomField>
    <fullName>BL_Landmark__c</fullName>
    <label>BL Landmark</label>
    <length>100</length>
    <type>Text</type>
</CustomField>