unpackaged/main/default/objects/WorkOrder_Clear__e/fields/BL_Longitude__c.field-meta.xml
<CustomField>
    <fullName>BL_Longitude__c</fullName>
    <label>BL Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>