unpackaged/main/default/objects/WorkOrder_Clear__e/fields/BL_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>BL_PostalCode__c</fullName>
    <label>BL PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>