unpackaged/main/default/objects/WorkOrder_Clear__e/fields/BL_StreetName__c.field-meta.xml
<CustomField>
    <fullName>BL_StreetName__c</fullName>
    <label>BL StreetName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>