unpackaged/main/default/objects/WorkOrder_Clear__e/fields/CDX_AuthCode__c.field-meta.xml
<CustomField>
    <fullName>CDX_AuthCode__c</fullName>
    <label>CDX AuthCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>