unpackaged/main/default/objects/WorkOrder_Clear__e/fields/CDX_AuthLevel__c.field-meta.xml
<CustomField>
    <fullName>CDX_AuthLevel__c</fullName>
    <label>CDX AuthLevel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>