unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code__c</fullName>
    <label>Channel Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>