unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Codes_Pacesetter__c.field-meta.xml
<CustomField>
    <fullName>Codes_Pacesetter__c</fullName>
    <label>Codes Pacesetter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>