unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Codes_Policy__c.field-meta.xml
<CustomField>
    <fullName>Codes_Policy__c</fullName>
    <label>Codes Policy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>