unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Codes_Priority__c.field-meta.xml
<CustomField>
    <fullName>Codes_Priority__c</fullName>
    <label>Codes Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>