unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Codes_Problem__c.field-meta.xml
<CustomField>
    <fullName>Codes_Problem__c</fullName>
    <label>Codes Problem</label>
    <length>20</length>
    <type>Text</type>
</CustomField>