unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Codes_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Codes_Resolution__c</fullName>
    <label>Codes Resolution</label>
    <length>20</length>
    <type>Text</type>
</CustomField>