unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Codes_Service__c.field-meta.xml
<CustomField>
    <fullName>Codes_Service__c</fullName>
    <label>Codes Service</label>
    <length>20</length>
    <type>Text</type>
</CustomField>