unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Driver_Id__c.field-meta.xml
<CustomField>
    <fullName>Driver_Id__c</fullName>
    <label>Driver Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>