unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>Facility_Id__c</fullName>
    <label>Facility Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>