unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Member_ClubCode__c.field-meta.xml
<CustomField>
    <fullName>Member_ClubCode__c</fullName>
    <label>Member ClubCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>