unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Member_ClubName__c.field-meta.xml
<CustomField>
    <fullName>Member_ClubName__c</fullName>
    <label>Member ClubName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>