unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Member_EmailAddress__c.field-meta.xml
<CustomField>
    <fullName>Member_EmailAddress__c</fullName>
    <label>Member EmailAddress</label>
    <length>80</length>
    <type>Text</type>
</CustomField>