unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Member_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Member_ExpirationDate__c</fullName>
    <label>Member ExpirationDate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>