unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Member_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Member_FirstName__c</fullName>
    <label>Member FirstName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>