unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Member_LastName__c.field-meta.xml
<CustomField>
    <fullName>Member_LastName__c</fullName>
    <label>Member LastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>