unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Member_MemberLevel__c.field-meta.xml
<CustomField>
    <fullName>Member_MemberLevel__c</fullName>
    <label>Member MemberLevel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>