unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Member_MemberType__c.field-meta.xml
<CustomField>
    <fullName>Member_MemberType__c</fullName>
    <label>Member MemberType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>