unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Member_PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>Member_PhoneNumber__c</fullName>
    <label>Member PhoneNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>