unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Member_Since__c.field-meta.xml
<CustomField>
    <fullName>Member_Since__c</fullName>
    <label>Member Since</label>
    <length>20</length>
    <type>Text</type>
</CustomField>