unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
    <label>Member Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>