unpackaged/main/default/objects/WorkOrder_Clear__e/fields/RAP_Program__c.field-meta.xml
<CustomField>
    <fullName>RAP_Program__c</fullName>
    <label>RAP Program</label>
    <length>20</length>
    <type>Text</type>
</CustomField>