unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Repair_Shop__c.field-meta.xml
<CustomField>
    <fullName>Repair_Shop__c</fullName>
    <label>Repair Shop</label>
    <length>75</length>
    <type>Text</type>
</CustomField>