unpackaged/main/default/objects/WorkOrder_Clear__e/fields/SourceSystem_OrgName__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem_OrgName__c</fullName>
    <label>SourceSystem OrgName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>