unpackaged/main/default/objects/WorkOrder_Clear__e/fields/TD_AddressType__c.field-meta.xml
<CustomField>
    <fullName>TD_AddressType__c</fullName>
    <label>TD AddressType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>