unpackaged/main/default/objects/WorkOrder_Clear__e/fields/TD_Country__c.field-meta.xml
<CustomField>
    <fullName>TD_Country__c</fullName>
    <label>TD Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>