unpackaged/main/default/objects/WorkOrder_Clear__e/fields/TD_CrossStreet__c.field-meta.xml
<CustomField>
    <fullName>TD_CrossStreet__c</fullName>
    <label>TD CrossStreet</label>
    <length>100</length>
    <type>Text</type>
</CustomField>