unpackaged/main/default/objects/WorkOrder_Clear__e/fields/TD_FOIType__c.field-meta.xml
<CustomField>
    <fullName>TD_FOIType__c</fullName>
    <label>TD FOIType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>