unpackaged/main/default/objects/WorkOrder_Clear__e/fields/TD_FullAddress__c.field-meta.xml
<CustomField>
    <fullName>TD_FullAddress__c</fullName>
    <label>TD FullAddress</label>
    <length>200</length>
    <type>Text</type>
</CustomField>