unpackaged/main/default/objects/WorkOrder_Clear__e/fields/TD_Landmark__c.field-meta.xml
<CustomField>
    <fullName>TD_Landmark__c</fullName>
    <label>TD Landmark</label>
    <length>100</length>
    <type>Text</type>
</CustomField>