unpackaged/main/default/objects/WorkOrder_Clear__e/fields/TD_Name__c.field-meta.xml
<CustomField>
    <fullName>TD_Name__c</fullName>
    <label>TD Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>