unpackaged/main/default/objects/WorkOrder_Clear__e/fields/TD_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>TD_PostalCode__c</fullName>
    <label>TD PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>