unpackaged/main/default/objects/WorkOrder_Clear__e/fields/TD_StreetName__c.field-meta.xml
<CustomField>
    <fullName>TD_StreetName__c</fullName>
    <label>TD StreetName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>