unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Truck_Id__c.field-meta.xml
<CustomField>
    <fullName>Truck_Id__c</fullName>
    <label>Truck Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>