unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Vehicle_Color__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Color__c</fullName>
    <label>Vehicle Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>