unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Vehicle_DriveType__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_DriveType__c</fullName>
    <label>Vehicle DriveType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>