unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Vehicle_FuelType__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_FuelType__c</fullName>
    <label>Vehicle FuelType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>