unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Vehicle_State__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_State__c</fullName>
    <label>Vehicle State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>