unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Vehicle_Tag__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Tag__c</fullName>
    <label>Vehicle Tag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>