unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Vehicle_VehicleType__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_VehicleType__c</fullName>
    <label>Vehicle VehicleType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>