unpackaged/main/default/objects/WorkOrder_Clear__e/fields/Vehicle_Year__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Year__c</fullName>
    <label>Vehicle Year</label>
    <length>20</length>
    <type>Text</type>
</CustomField>