unpackaged/main/default/objects/WorkOrder_Clear__e/fields/WaitTime__c.field-meta.xml
<CustomField>
    <fullName>WaitTime__c</fullName>
    <label>WaitTime</label>
    <length>20</length>
    <type>Text</type>
</CustomField>