unpackaged/main/default/objects/WorkOrder_Clear__e/fields/WorkOrder_ApptTime__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_ApptTime__c</fullName>
    <label>WorkOrder ApptTime</label>
    <length>20</length>
    <type>Text</type>
</CustomField>