unpackaged/main/default/objects/WorkOrder_Clear__e/fields/WorkOrder_CashCall__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_CashCall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkOrder CashCall</label>
    <type>Checkbox</type>
</CustomField>