unpackaged/main/default/objects/WorkOrder_Clear__e/fields/WorkOrder_ChannelType__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_ChannelType__c</fullName>
    <label>WorkOrder Channel Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>