unpackaged/main/default/objects/WorkOrder_Clear__e/fields/WorkOrder_Collision__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_Collision__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkOrder Collision</label>
    <type>Checkbox</type>
</CustomField>