unpackaged/main/default/objects/WorkOrder_Clear__e/fields/WorkOrder_NeedsFlat__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_NeedsFlat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkOrder NeedsFlat</label>
    <type>Checkbox</type>
</CustomField>