unpackaged/main/default/objects/WorkOrder_Clear__e/fields/WorkOrder_NumPass__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_NumPass__c</fullName>
    <label>WorkOrder NumPass</label>
    <length>20</length>
    <type>Text</type>
</CustomField>