unpackaged/main/default/objects/WorkOrder_Clear__e/fields/WorkOrder_PTA__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_PTA__c</fullName>
    <label>WorkOrder PTA</label>
    <type>DateTime</type>
</CustomField>