unpackaged/main/default/objects/WorkOrder_Clear__e/fields/WorkOrder_RedFlag__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_RedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkOrder RedFlag</label>
    <type>Checkbox</type>
</CustomField>