unpackaged/main/default/objects/WorkOrder_Clear__e/fields/WorkOrder_RequestFlat__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_RequestFlat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WorkOrder RequestFlat</label>
    <type>Checkbox</type>
</CustomField>