unpackaged/main/default/objects/WorkOrder_Clear__e/fields/WorkOrder_StatusTime__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_StatusTime__c</fullName>
    <label>WorkOrder StatusTime</label>
    <length>20</length>
    <type>Text</type>
</CustomField>